<resources>
    <string name="app_name">Prime factor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tab1">Math</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="prime_factor">Prime Factors: </string>
    <string name="show_prime_factors">Show prime factors</string>
    <string name="prime_factor_left">Prime factors of left operand:</string>
    <string name="prime_factor_right">Prime factors of right operand:</string>
    <string name="prime_factor_common">Common prime factors:</string>
    <string name="show_next">Next</string>
    <string name="show_result">Show Result</string>
</resources>
