<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/left_operand_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:width="50dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="serif-monospace"
            android:text="/"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/right_operand_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:width="50dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF00FF00" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/left_operand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:width="50dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="serif-monospace"
            android:text="/"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:inputType="number"
            android:id="@+id/right_operand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:width="50dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF00FF00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/show_prime_factors"
            android:id="@+id/show_factor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/show_next"
            android:text="@string/show_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/show_result"
            android:text="@string/show_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF00FF00" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/prime_factor_left"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:id="@+id/left_operand_factors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:layout_centerHorizontal="true"
            android:padding="4dp">

        </GridLayout>
    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF00FF00" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/prime_factor_right"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:id="@+id/right_operand_factors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:layout_centerHorizontal="true"
            android:padding="4dp">

        </GridLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF00FF00" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/prime_factor_common"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:id="@+id/common_factors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:layout_centerHorizontal="true"
            android:padding="4dp">

        </GridLayout>
    </LinearLayout>






</LinearLayout>